--- a/index.html
+++ b/index.html
@@ -1,15 +1,112 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-
-<body>
-
-</body>
-
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./assets/css/reset.css" />
+    <link rel="stylesheet" href="./assets/css/style.css" />
+    <link rel="stylesheet" href="./assets/css/font-awesome.css" />
+    <title>Ex.4 - UNIT 1</title>
+  </head>
+  <body>
+    <header>
+      <div id="logo">
+        <img src="./assets/img/logo.svg" alt="Logo di Epicode" />
+        <p>Epicode - Il blog dei developers</p>
+      </div>
+      <nav>
+        <ul>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">Articoli</a></li>
+          <li><a href="#">Job</a></li>
+        </ul>
+      </nav>
+    </header>
+    <main>
+      <article>
+        <div class="container">
+          <div>
+            <ul>
+              <li></li>
+              <li></li>
+              <li></li>
+            </ul>
+          </div>
+        </div>
+        <div class="container">
+          <div>
+            <ol>
+              <li></li>
+              <li></li>
+              <li></li>
+            </ol>
+          </div>
+        </div>
+        <div class="container">
+          <div>
+            <table>
+              <thead>
+                <caption></caption>
+                <tr>
+                  <th></th>
+                  <th></th>
+                  <th></th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                </tr>
+                <tr>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                </tr>
+                <tr>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                </tr>
+                <tr>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                </tr>
+                <tr>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+        </div>
+        <div class="container">
+          <p></p>
+          <video src=""></video>
+        </div>
+        <div>
+          <h2>Novità</h2>
+          <p>
+            Vuoi rimanere aggiornato su altre novità del blog? Iscriviti alla
+            nostra newsletter:
+          </p>
+          <fieldset>
+            <form action="#">
+              <input
+                type="email"
+                name="email"
+                placeholder="Inserisci l'email"
+              />
+              <button type="submit">Iscriviti!</button>
+            </form>
+          </fieldset>
+        </div>
+      </article>
+    </main>
+    <footer></footer>
+  </body>
 </html>
