modified the <main> & <footer> html structure

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         </div>
         <div class="container">
           <p></p>
-          <video src=""></video>
+          <iframe src="" frameborder="0"></iframe>
         </div>
         <div>
           <h2>Novità</h2>
@@ -101,12 +101,35 @@
                 name="email"
                 placeholder="Inserisci l'email"
               />
-              <button type="submit">Iscriviti!</button>
+              <button type="submit"></button>
             </form>
           </fieldset>
         </div>
       </article>
+      <aside>
+        <h1></h1>
+        <div class="lower_container">
+          <h3><a href="#"></a></h3>
+          <p></p>
+          <p class="data"></p>
+        </div>
+        <div class="lower_container">
+          <h3><a href="#"></a></h3>
+          <p></p>
+          <p class="data"></p>
+        </div>
+        <div class="lower_container">
+          <h3><a href="#"></a></h3>
+          <p></p>
+          <p class="data"></p>
+        </div>
+      </aside>
     </main>
-    <footer></footer>
+    <footer>
+      <div class="credits">
+        <p></p>
+        <p></p>
+      </div>
+    </footer>
   </body>
 </html>
