--- a/index.html
+++ b/index.html
@@ -7,86 +7,139 @@
     <link rel="stylesheet" href="./assets/css/reset.css" />
     <link rel="stylesheet" href="./assets/css/style.css" />
     <link rel="stylesheet" href="./assets/css/font-awesome.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
     <title>Ex.4 - UNIT 1</title>
   </head>
   <body>
     <header>
-      <div id="logo">
+      <div class="container">
         <img src="./assets/img/logo.svg" alt="Logo di Epicode" />
-        <p>Epicode - Il blog dei developers</p>
+        <p>EPICODE - IL BLOG DEI DEVELOPERS</p>
+        <nav>
+          <p><a href="#">⇒ HOME ⇐</a></p>
+          <p><a href="#">⇒ ARTICOLI ⇐</a></p>
+          <p><a href="#">⇒ JOB ⇐</a></p>
+        </nav>
       </div>
-      <nav>
-        <ul>
-          <li><a href="#">Home</a></li>
-          <li><a href="#">Articoli</a></li>
-          <li><a href="#">Job</a></li>
-        </ul>
-      </nav>
     </header>
     <main>
       <article>
-        <div class="container">
-          <div>
-            <ul>
-              <li></li>
-              <li></li>
-              <li></li>
+        <div class="container_par">
+          <div class="title">
+            <h1>Come creare un template per i post</h1>
+            <p>
+              <i class="far fa-edit"></i> Mario Rossi -
+              <i class="far fa-clock"></i> Pubblicato il 25/10/2020
+            </p>
+          </div>
+          <div class="par_1">
+            <p>
+              La prima cosa da fare è suddividere in blocchi logici la pagina,
+              identificando le <strong>parti comuni</strong> da applicare a
+              tutte le pagine
+            </p>
+            <p id="last_child">Le varie aree saranno quindi suddivise in:</p>
+            <ul class="list">
+              <li>
+                Contenuti di intestazione del tag <code>&lt;header&gt;</code>
+              </li>
+              <li>
+                Contenuti centrali variabili del tag
+                <code>&lt;main&gt;</code> (corpo principale)
+              </li>
+              <li>
+                Contenuti di fine pagina comuni, da inserire nel tag
+                <code>&lt;footer&gt;</code>
+              </li>
             </ul>
           </div>
         </div>
-        <div class="container">
+        <div class="par_2">
+          <p>
+            Formattazione del codice <br />
+            Il testo dell'articolo dovrà essere formattato per identificare
+            tutte le parti da <strong>selezionare con i CSS</strong>. Perciò i
+            passi saranno:
+          </p>
           <div>
-            <ol>
-              <li></li>
-              <li></li>
-              <li></li>
+            <ol class="list">
+              <li>
+                Progettare il markup assegnando ad ogni specifico testo il tag
+                appropriato
+              </li>
+              <li>
+                Scrivere l'HTML dai tag esterni a quelli interni e dall'alto
+                verso il basso
+              </li>
+              <li>Applicare gli stili CSS</li>
             </ol>
           </div>
         </div>
-        <div class="container">
-          <div>
-            <table>
-              <thead>
-                <caption></caption>
-                <tr>
-                  <th></th>
-                  <th></th>
-                  <th></th>
-                </tr>
-              </thead>
-              <tbody>
-                <tr>
-                  <td></td>
-                  <td></td>
-                  <td></td>
-                </tr>
-                <tr>
-                  <td></td>
-                  <td></td>
-                  <td></td>
-                </tr>
-                <tr>
-                  <td></td>
-                  <td></td>
-                  <td></td>
-                </tr>
-                <tr>
-                  <td></td>
-                  <td></td>
-                  <td></td>
-                </tr>
-                <tr>
-                  <td></td>
-                  <td></td>
-                  <td></td>
-                </tr>
-              </tbody>
-            </table>
-          </div>
+        <div class="container_tab">
+          <p>
+            L'applicazione di stili CSS è cresciuta negli anni fino a
+            raggiungere la diffusione pressoché totale.
+          </p>
+          <table>
+            <thead>
+              <caption>
+                Diffusione dei CSS
+              </caption>
+              <tr>
+                <th>Anno</th>
+                <th>% di utilizzo</th>
+                <th>Supporto browsers</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td class="white">2000</td>
+                <td class="white">20%</td>
+                <td class="white">17%</td>
+              </tr>
+              <tr>
+                <td class="grey">2002</td>
+                <td class="grey">35%</td>
+                <td class="grey">22%</td>
+              </tr>
+              <tr>
+                <td class="white">2004</td>
+                <td class="white">45%</td>
+                <td class="white">42%</td>
+              </tr>
+              <tr>
+                <td class="grey">2008</td>
+                <td class="grey">80%</td>
+                <td class="grey">51%</td>
+              </tr>
+              <tr>
+                <td class="white row">2012</td>
+                <td class="white row">100%</td>
+                <td class="white row">76%</td>
+              </tr>
+            </tbody>
+          </table>
         </div>
-        <div class="container">
-          <p></p>
-          <iframe src="" frameborder="0"></iframe>
+        <div class="container_par">
+          <p>
+            Un test di validazione potrà essere fatto tramite il
+            <a href="https://validator.w3.org/">tool online</a> dedicato allo
+            scopo. Una volta ottimizzato il tutto, avremo raggiunto il nostro
+            obiettivo ed essere stati dei veri developers come loro:
+          </p>
+          <iframe
+            src="https://www.youtube.com/embed/PMZFAxgjHI8"
+            title="Giovani e Lavoro nel 2022: Ecco la Verità #DipendeDaTech"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen
+          >
+          </iframe>
         </div>
         <div>
           <h2>Novità</h2>
@@ -101,34 +154,38 @@
                 name="email"
                 placeholder="Inserisci l'email"
               />
-              <button type="submit"></button>
+              <button type="submit">Iscriviti!</button>
             </form>
           </fieldset>
         </div>
+        <aside>
+          <h1>Articoli correlati</h1>
+          <div class="lower_container">
+            <h3><a href="#">Validare il codice HTML</a></h3>
+            <p>Categoria: develop</p>
+            <p class="data_article">Data: 18-9-2020</p>
+          </div>
+          <div class="lower_container">
+            <h3><a href="#"></a></h3>
+            <p>Categoria: develop</p>
+            <p class="data_article">Data: 16-9-2020</p>
+          </div>
+          <div class="lower_container">
+            <h3><a href="#"></a></h3>
+            <p>Categoria: ottimizzazione</p>
+            <p class="data_container">Data: 30-9-2020</p>
+          </div>
+        </aside>
       </article>
-      <aside>
-        <h1></h1>
-        <div class="lower_container">
-          <h3><a href="#"></a></h3>
-          <p></p>
-          <p class="data"></p>
-        </div>
-        <div class="lower_container">
-          <h3><a href="#"></a></h3>
-          <p></p>
-          <p class="data"></p>
-        </div>
-        <div class="lower_container">
-          <h3><a href="#"></a></h3>
-          <p></p>
-          <p class="data"></p>
-        </div>
-      </aside>
     </main>
     <footer>
       <div class="credits">
-        <p></p>
-        <p></p>
+        <p>Blog Epicode &copy2022</p>
+        <p>
+          Testata online di Mario Rossi, registrato con prot. n.213/2018 - Via
+          Luigi Einaudi 2 - Milano. P.IVA 00112233.
+          <a href="#">info@epicode.school</a>
+        </p>
       </div>
     </footer>
   </body>
