completed the project

--- a/index.html
+++ b/index.html
@@ -141,8 +141,8 @@
           >
           </iframe>
         </div>
-        <div>
-          <h2>Novità</h2>
+        <div class="lower_container">
+          <h2>NOVIT&#192;</h2>
           <p>
             Vuoi rimanere aggiornato su altre novità del blog? Iscriviti alla
             nostra newsletter:
@@ -159,31 +159,38 @@
           </fieldset>
         </div>
         <aside>
-          <h1>Articoli correlati</h1>
-          <div class="lower_container">
+          <h1>ARTICOLI CORRELATI</h1>
+          <div class="lower_container art">
             <h3><a href="#">Validare il codice HTML</a></h3>
-            <p>Categoria: develop</p>
-            <p class="data_article">Data: 18-9-2020</p>
+            <p><i class="fas fa-tag"></i> Categoria: develop</p>
+            <p class="data_article">
+              <i class="fas fa-calendar-alt"></i> Data: 18-9-2020
+            </p>
           </div>
-          <div class="lower_container">
-            <h3><a href="#"></a></h3>
-            <p>Categoria: develop</p>
-            <p class="data_article">Data: 16-9-2020</p>
+          <div class="lower_container art">
+            <h3><a href="#">Correggere la sintassi</a></h3>
+            <p><i class="fas fa-tag"></i> Categoria: develop</p>
+            <p class="data_article">
+              <i class="fas fa-calendar-alt"></i> Data: 16-9-2020
+            </p>
           </div>
-          <div class="lower_container">
-            <h3><a href="#"></a></h3>
-            <p>Categoria: ottimizzazione</p>
-            <p class="data_container">Data: 30-9-2020</p>
+          <div class="lower_container art">
+            <h3><a href="#">Meno Kb nella pagina</a></h3>
+            <p><i class="fas fa-tag"></i> Categoria: ottimizzazione</p>
+            <p class="data_article">
+              <i class="fas fa-calendar-alt"></i> Data: 30-9-2020
+            </p>
           </div>
         </aside>
       </article>
     </main>
     <footer>
       <div class="credits">
-        <p>Blog Epicode &copy2022</p>
+        <p id="last">Blog Epicode &copy2022</p>
         <p>
           Testata online di Mario Rossi, registrato con prot. n.213/2018 - Via
-          Luigi Einaudi 2 - Milano. P.IVA 00112233.
+          Luigi Einaudi 2 - Milano. <br />
+          P.IVA 00112233.
           <a href="#">info@epicode.school</a>
         </p>
       </div>
