changed some text content in the html and changed the bg color of the header

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <nav>
           <p><a href="#">⇒ HOME ⇐</a></p>
           <p><a href="#">⇒ ARTICOLI ⇐</a></p>
-          <p><a href="#">⇒ JOB ⇐</a></p>
+          <p><a href="#">⇒ LAVORA CON NOI ⇐</a></p>
         </nav>
       </div>
     </header>
