--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
     </main>
     <footer>
       <div class="credits">
-        <p id="last">Blog Epicode &copy2022</p>
+        <p id="last">Blog Epicode &copy;2022</p>
         <p>
           Testata online di Mario Rossi, registrato con prot. n.213/2018 - Via
           Luigi Einaudi 2 - Milano. <br />
